<resources>
    <string name="facebook_app_id">2471928086388329</string>
    <string name="fb_login_protocol_scheme">fb2471928086388329</string>

    <string name="app_name">Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Devices</string>
    <string name="menu_slideshow">Account</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Logout</string>
    <string name="actions">Actions</string>
    <string name="title_activity_login2">TechLimb</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="deviceAddingResource">Please connect your device via NFC</string>
    <string name="deviceRegResource">Successfully read %s. Please wait while we are registering your device…</string>
    <string name="health_notification">Health Notification</string>
    <string name="device_notification">Device Notification</string>
    <string name="notification_history">Notification History</string>
    <string name="severity">Severity: %s</string>
    <string name="advice">Advice: %s</string>
    <string name="time">Time: %s</string>
    <string name="total_notif">Total notifications received: %s</string>
</resources>
